tests/negative/gold/abstractG_test.gold
tests/negative/abstractG_test.toit:9:7: error: Non-abstract class 'A' is missing implementations
class A extends Abstract:
      ^
tests/negative/abstractG_test.toit:6:12: note: Method 'foo' is only partially implemented
  abstract foo x y=499 --named1 --named2=42 --named3=499
           ^~~
tests/negative/abstractG_test.toit:7:12: note: Method 'bar' is only partially implemented
  abstract bar x y=499 [block] --named1 --named2=42 --named3=499 [--b]
           ^~~
tests/negative/abstractG_test.toit:33:7: error: Non-abstract class 'B' is missing implementations
class B extends Abstract2:
      ^
tests/negative/abstractG_test.toit:25:12: note: Method 'foo' is only partially implemented
  abstract foo x y --named1 --named2=42 --named3=499 --named4=11
           ^~~
tests/negative/abstractG_test.toit:31:12: note: Method 'bar' is only partially implemented
  abstract bar x y [block] --named1 --named2=42 --named3=499 [--b] --named4=11
           ^~~
Compilation failed.
